fix(final): alignment of box6 & 7

--- a/final-project/style2.css
+++ b/final-project/style2.css
@@ -21,10 +21,7 @@ body {
 
 .container {
     display: grid;
-    gap: 12px;
-    grid-template-columns:
-        minmax(200px, auto)
-        minmax(38px, auto);
+    grid-template-columns: 250px 1fr;
     grid-template-rows:
         minmax(60px, auto) 
         minmax(80px, auto) 
@@ -32,23 +29,23 @@ body {
         minmax(50px, auto)
         minmax(100px, auto)
         minmax(100px, auto)
-        minmax(300px, auto)
-        minmax(120px, auto)
+        minmax(145px, auto)
+        minmax(0px, auto)
         minmax(200px, auto)
         minmax(120px, auto)
         minmax(80px, auto);
 
     grid-template-areas:
-        "box1  box1  box1  box1"
-        "box2  box2  box2  box2"
-        "box3  box3  box3  box3"
-        "box4  box4  box4  box4"
-        "box5  box5  box5  box5"
-        "box6  box6  . ."
-        "box6  box6  box7  box7"
-        "box8  box8  box8  box8"
-        "box9  box9  box9  box9"
-        "box11 box11 box11 box11";
+        "box1  box1"
+        "box2  box2"
+        "box3  box3"
+        "box4  box4"
+        "box5  box5"
+        "box6  box7"
+        "box6  ."
+        "box8  box8"
+        "box9  box9"
+        "box11 box11";
 }
 
 .container > * {
@@ -192,7 +189,7 @@ body {
     align-items: center;
     flex-wrap: nowrap;
     padding-left: 0;
-    margin: 0;
+    transform: translateX(-50px);
     flex: 1;
 }
 
@@ -475,11 +472,7 @@ body {
 
 .box8 .create-business-account,
 .box8 .request-a-call-back {
-    background-color: #008fdd;
-    color: #ffffff;
-    padding: 19px 15px;
-    font-size: 14px;
-    font-weight: 700;
+    visibility: hidden;
 }
 
 .box9 {
